Bug 436974 - Weather Report can't find some cities in search, works only when configured manually
Summary: Weather Report can't find some cities in search, works only when configured m...
Status: RESOLVED FIXED
Alias: None
Product: kdeplasma-addons
Classification: Unmaintained
Component: Weather (other bugs)
Version First Reported In: 5.21.4
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-12 13:57 UTC by Mircea Kitsune
Modified: 2021-11-12 16:02 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mircea Kitsune 2021-05-12 13:57:24 UTC
SUMMARY
When configuring the Weather Report widget, clicking Choose to pick a weather provider and searching for a location, the search returns empty results despite the provider still offering that location. This seems to be happening at least for BBC Weather (bbcukmet) when searching for my city (Bucharest).

I know only the search function is broken because existing weather widgets still work with the previous settings. In my case I can get the applet working by manually setting the following parameters in ~/.config/plasma-org.kde.plasma.desktop-appletsrc under its entry:

source=bbcukmet|weather|Bucharest, Romania|683506
weatherServiceProviders=bbcukmet

STEPS TO REPRODUCE
Add a Weather widget, go to its settings to pick a location, enable the checkboxes for all weather providers, try searching for various cities.

OBSERVED RESULT
You should notice some entries are missing, especially from the bbcukmet source. If you can't then use my example: Look for Bucharest / București.

EXPECTED RESULT
At least bbcukmet provides weather for the city, existing plasmoids are still updated accordingly. It should thus be showing up in the search.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro
KDE Plasma Version: 5.21.4
KDE Frameworks Version: 5.81.0
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2021-11-11 05:47:24 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1191
Comment 2 Nate Graham 2021-11-12 15:59:54 UTC
Git commit e4a9cc48f24ab9f15e534c655458df06b6451121 by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 12/11/2021 at 15:59.
Pushed by ngraham into branch 'master'.

[dataengines/weather] Improved search for BBC UK Met source places

Adds partial-text searching for BBC UK Met source by using the auto=true
API param. Some place names with Unicode in them which were matched
in auto=false are not shown in auto=true results, so we merge the two.
Related: bug 429506

M  +76   -30   dataengines/weather/ions/bbcukmet/ion_bbcukmet.cpp
M  +5    -2    dataengines/weather/ions/bbcukmet/ion_bbcukmet.h

https://invent.kde.org/plasma/plasma-workspace/commit/e4a9cc48f24ab9f15e534c655458df06b6451121