[dataengines/weather] Improved search for BBC UK Met source places

Adds partial-text searching for BBC UK Met source by using the auto=true
API param. Some place names with Unicode in them which were matched
in auto=false are not shown in auto=true results, so we merge the two.

BUG: 436974
BUG: 429506